--- a/views/postsindex.ejs
+++ b/views/postsindex.ejs
@@ -9,21 +9,48 @@
 </head>
 
 <body>
-  <h1>게시글 목록</h1>
-  <h2>총 게시글 수 <%= postCounts %></h2>
+
+  <form action="/posts" method="POST">
+    <div>
+      <label>제목</label>
+      <input type="text" name="title">
+    </div>
+    <div>
+      <label>내용</label>
+      <input type="text" name="content">
+    </div>
+    <button type="submit">제출</button>
+  </form>
+  <h1>글 목록</h1>
+  <h2>총 글 수 <%= postCounts %></h2>
   <ul>
     <% if(postCounts> 0) { %>
     <% for(let i=0; i < postCounts; i++) { %>
     <li>
       <p>title: <%= POST[i].title %></p>
       <p>content: <%= POST[i].content %></p>
+      <a href="#" onclick="deletePost(`<%= POST[i].title %>`);">삭제</a>
+
 
     </li>
     <% } %> <% } else { %>
-    <li>회원 정보가 없습니다!</li>
+    <li>블로그 글이 없습니다!</li>
     <% } %>
   </ul>
 
 </body>
+<script>
+  function deletePost(title) {
+    fetch(`http://localhost:4000/posts/${title}`, {
+      method: 'delete',
+      headers: {
+        'Content-type': 'application/json'
+      }
+    }).then((res) => {
+      console.log(res);
+      location.reload();
+    })
+  }
+</script>
 
 </html>
