--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
   <h1>Hello, Express Service</h1>
   <h2><a href="/users">Move to User service</a> </h2>
   <h2><a href="/posts">Move to Post service</a></h2>
+  <h2><a href="/board">Move to board service</a></h2>
 </body>
 
 </html>
