--- a/views/write.ejs
+++ b/views/write.ejs
@@ -9,14 +9,15 @@
 </head>
 
 <body>
-  <form action="/board" method="POST">
+  <h1>게시글 쓰기</h1>
 
-    <input type="text" name="title" value="<%= BOARD[arrIndex].title%>">
-    <textarea name="content">
-    <%=BOARD[arrIndex].content%>    
-    </textarea>
-    <input type="submit" value="수정하기">
+  <form action="/board" method="POST">
+    <input type="text" name="title" placeholder="제목">
+    <textarea name="content">내용</textarea>
+    <input type="submit" value="쓰기">
   </form>
+  <a href="/board">뒤로가기</a>
+
 </body>
 
 </html>
