--- a/views/modify.ejs
+++ b/views/modify.ejs
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>수정하기</title>
 </head>
 
 <body>
-  <form action="/board" method="POST">
+  <form action="/board/modify/title/<%=selectedBoard.title%>" method="POST">
 
-    <input type="text" name="title" value="<%= BOARD[arrIndex].title%>">
+    <input type="text" name="title" value="<%= selectedBoard.title%>">
     <textarea name="content">
-    <%=BOARD[arrIndex].content%>    
+    <%=selectedBoard.content%>    
     </textarea>
     <input type="submit" value="수정하기">
   </form>
