--- a/views/write.ejs
+++ b/views/write.ejs
@@ -11,9 +11,9 @@
 <body>
   <h1>게시글 쓰기</h1>
 
-  <form action="/board" method="POST">
-    <input type="text" name="title" placeholder="제목">
-    <textarea name="content">내용</textarea>
+  <form action="/board/write" method="POST">
+    <input type="text" name="title" required placeholder="제목">
+    <textarea name="content" required>내용</textarea>
     <input type="submit" value="쓰기">
   </form>
   <a href="/board">뒤로가기</a>
