--- a/views/board.ejs
+++ b/views/board.ejs
@@ -12,16 +12,22 @@
 
   <h1>글 목록</h1>
   <a href="/board/write">글쓰기</a>
+  <a href="/login/logout">로그아웃</a>
   <h2>총 글 수 <%= boardCounts %></h2>
   <ul>
     <% if(boardCounts> 0) { %>
     <% for(let i=0; i < boardCounts; i++) { %>
     <li>
+      <p>작성자: <%= BOARD[i].id %></p>
       <p>title: <%= BOARD[i].title %></p>
       <p>content: <%= BOARD[i].content %></p>
+
+      <% if (BOARD[i].id === userId) { %>
+
+
       <a href="#" onclick="deleteBoard(`<%= BOARD[i].title %>`);">삭제</a>
       <a href="board/modify/title/<%=BOARD[i].title%>">수정</a>
-
+      <% } %>
     </li>
     <% } %> <% } else { %>
     <li>게시판 글이 없습니다!</li>
