--- a/views/board.ejs
+++ b/views/board.ejs
@@ -5,49 +5,170 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BOARD 게시판 입니다</title>
+  <title>Tetz borad</title>
+  <style>
+    * {
+      margin: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: #eee;
+    }
+
+    ul,
+    ol {
+      list-style: none;
+      padding: 0;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    .btn {
+      padding: 5px 10px;
+      border-radius: 10px;
+      margin: 0 5px;
+      font-weight: bold;
+      color: #000;
+    }
+
+    .btn.orange {
+      background-color: orange;
+    }
+
+    .btn.blue {
+      background-color: dodgerblue;
+    }
+
+    .btn.red {
+      background-color: coral;
+    }
+
+    .inner {
+      position: absolute;
+      width: 1200px;
+      height: 100vh;
+      left: 0;
+      right: 0;
+      margin: auto;
+      padding: 50px;
+    }
+
+    .inner .board_container {}
+
+    .inner .board_container .board_header {
+      text-align: center;
+    }
+
+    .inner .board_container .board_write {
+      margin-top: 30px;
+      text-align: right;
+    }
+
+    .inner .board_container .board_write span {
+      margin-right: 30px;
+      font-weight: bold;
+    }
+
+    .inner .board_container .board_body {
+      width: 100%;
+      margin-top: 50px;
+    }
+
+    .inner .board_container .board_body .board {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .inner .board_container .board_body .board li {
+      width: 100%;
+      border-radius: 30px;
+      border: 1px solid #999;
+      background-color: #fff;
+      margin-bottom: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .inner .board_container .board_body .board li div {
+      margin: 20px 30px;
+    }
+
+    .inner .board_container .board_body .board li .title {
+      font-size: 28px;
+    }
+
+    .inner .board_container .board_body .board li .content {
+      font-size: 20px;
+    }
+  </style>
 </head>
 
+
 <body>
-
-  <h1>글 목록</h1>
-  <a href="/board/write">글쓰기</a>
-  <a href="/login/logout">로그아웃</a>
-  <h2>총 글 수 <%= boardCounts %></h2>
-  <ul>
-    <% if(boardCounts> 0) { %>
-    <% for(let i=0; i < boardCounts; i++) { %>
-    <li>
-      <p>작성자: <%= BOARD[i].id %></p>
-      <p>title: <%= BOARD[i].title %></p>
-      <p>content: <%= BOARD[i].content %></p>
-
-      <% if (BOARD[i].id === userId) { %>
-
-
-      <a href="#" onclick="deleteBoard(`<%= BOARD[i].title %>`);">삭제</a>
-      <a href="board/modify/title/<%=BOARD[i].title%>">수정</a>
-      <% } %>
-    </li>
-    <% } %> <% } else { %>
-    <li>게시판 글이 없습니다!</li>
-    <% } %>
-  </ul>
+  <div class="inner">
+    <div class="board_container">
+      <div class="board_header">
+        <h1>Tetz Board</h1>
+      </div>
+      <div class="board_write">
+        <span>현재 등록 글 : &nbsp; <%= articleCounts %></span>
+        <a class="btn red" href="/board/write">글쓰기</a>
+        <a class="btn orange" href="/login/logout">로그아웃</a>
+      </div>
+      <div class="board_body">
+        <ul class="board">
+          <% if (articleCounts> 0) { %>
+          <% for(let i=0; i < articleCounts; i++) { %>
+          <li>
+            <div class="title">
+              작성자 : <%= ARTICLE[i].userName? ARTICLE[i].userName :ARTICLE[i].id%>
+            </div>
+            <div class="title">
+              <%= ARTICLE[i].title %>
+            </div>
+            <div class="content">
+              <%= ARTICLE[i].content %>
+            </div>
+            <div class="img">
+              <% if (ARTICLE[i].img != null){ %>
+              <img src="uploads/<%= ARTICLE[i].img %>" width="500" />
+              <%} %>
+            </div>
+            <div class="foot">
+              <% if (ARTICLE[i].id === userId) { %>
+              <a class="btn orange" href="board/modify/title/<%= ARTICLE[i].title %>">수정</a>
+              <a class="btn blue" href="#" onclick="deleteArticle('<%= ARTICLE[i].title %>')">삭제</a>
+              <% } %>
+            </div>
+          </li>
+          <% } %>
+          <% } else { %>
+          <li>
+            <div class="title">글이 없습니다!</div>
+            <% } %>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
+
 <script>
-  console.log("얍");
-  // 삭제 기능 함수
-  function deleteBoard(title) {
+  function deleteArticle(title) {
     fetch(`board/delete/title/${title}`, {
       method: 'delete',
       headers: {
         'Content-type': 'application/json'
-      }
+      },
     }).then((res) => {
-      console.log(res);
       location.href = '/board';
     })
   }
 </script>
+
 
 </html>
