--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회원 가입</title>
+  <title>로그인</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <!-- JavaScript Bundle with Popper -->
@@ -13,8 +13,10 @@
 </head>
 
 <body>
-  <!-- 반응형으로 -->
-
+  <div class="row">
+    <div class="col-8 col-md-4 col-lg-10 bg-primary">1st column</div>
+    <div class="col-4 col-md-8 col-lg-2 bg-warning">2nd column</div>
+  </div>
 
   <div class="container-lg d-flex flex-column align-items-center bg-light w-50 p-5 rounded-3">
     <h2>로그인</h2>
