--- a/views/users.ejs
+++ b/views/users.ejs
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/style.css">
   <!-- <script src="./js/test.js"></script> -->
 </head>
 
 <body>
-
   <form action="/users" method="POST">
     <div>
       <label>아이디</label>
@@ -22,41 +21,43 @@
       <input type="text" name="name" />
     </div>
     <div>
-      <label>이메일</label>
+      <label>email</label>
       <input type="email" name="email" />
     </div>
-
     <button type="submit">제출</button>
   </form>
-
-
-
-
   <h1>회원 목록</h1>
-  <h2>총 회원 수 <%= userCounts %></h2>
+  <h2>총 회원 수 <%= userCounts %>
+  </h2>
   <ul>
-    <% if(userCounts> 0) { %>
-    <% for(let i=0; i < userCounts; i++) { %>
+    <% if (userCounts> 0) { %>
+    <% for (let i=0; i < userCounts; i++) { %>
     <li>
-      <p>ID: <%= USER[i].id %></p>
-      <p>이름: <%= USER[i].name %></p>
-      <p>email: <%= USER[i].email %></p>
+      <p>ID: <%= USER[i].id %>
+      </p>
+      <p>이름: <%= USER[i].name %>
+      </p>
+      <p>이메일: <%= USER[i].email %></p>
       <a href="#" onclick="deleteUser('<%= USER[i].id %>');">삭제</a>
     </li>
-    <% } %> <% } else { %>
-    <li>회원 정보가 없습니다!</li>
+    <% } %>
+    <% } else { %>
+    <li>
+      회원 정보가 없습니다.
+    </li>
     <% } %>
   </ul>
-  <img src="/images/<%= imgName%>" alt="나무늘보">
+  <img src="./images/<%= imgName %>" alt="고양이">
 </body>
+
 <script>
   function deleteUser(id) {
+    console.log(Math.round(6));
     fetch(`http://localhost:4000/users/${id}`, {
-      // header 라던지 method 
       method: 'delete',
       headers: {
         'Content-type': 'application/json'
-      }
+      },
     }).then((res) => {
       console.log(res);
       location.reload();
